# grismagic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
Ex/: build_matrix.py  dispersion.py  eigenspectra_kurucz.csv  mock_20_500.npy  mock_dispersed_20_500.npy  mock_recovered_20_500.npy  playground.py  playground_mock.py  recovery.py
Ex/Config Files/: GR150C.F115W.220725.conf  GR150C.F150W.220725.conf  GR150C.F200W.220725.conf  GR150R.F115W.220725.conf  GR150R.F150W.220725.conf  GR150R.F200W.220725.conf  NIRISS_F115W_GR150C.V5.conf  NIRISS_F115W_GR150R.V5.conf  NIRISS_F150W_GR150C.V5.conf  NIRISS_F150W_GR150R.V5.conf  NIRISS_F200W_GR150C.V5.conf  NIRISS_F200W_GR150R.V5.conf  README.docx  jwst_niriss_specwcs_0070.GR150C.F115W.asdf  jwst_niriss_specwcs_0072.GR150R.F115W.asdf  jwst_niriss_specwcs_0073.GR150R.F150W.asdf  jwst_niriss_specwcs_0074.GR150R.F200W.asdf  jwst_niriss_specwcs_0076.GR150C.F200W.asdf  jwst_niriss_specwcs_0077.GR150R.F090W.asdf  jwst_niriss_specwcs_0078.GR150C.F150W.asdf  jwst_niriss_specwcs_0080.GR150C.F090W.asdf
Ex/SenseConfig/: ._GR150R.F150W.conf
docs/: conf.py  index.rst
src/grismagic/: __init__.py  disperse.py  readers.py  traces.py  wavelengthrange.py
tests/: test_example.py  test_traces_asdf.py  test_traces_axe.py  test_traces_grismconf.py
