[project]
name = "grismagic"
authors = [{name = "Example Author", email = "author@mpia.de"}]
description = "Grism configuration readers and trace/dispersion utilities"
readme = "README.md"
license = { file = 'LICENSE' }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "asdf",
    "jax",
]
dynamic = ['version']

[project.optional-dependencies]
roman = [
    "pyyaml",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
]
test = [
    "pytest",
    "pytest-doctestplus",
    "flake8",
    "flake8-pyproject",
    "codecov",
    "pytest-cov",
    "jwst",
    "grismconf",
]

[project.urls]
"Bug Tracker" = "https://github.com/mpi-astronomy/grismagic/issues"
"Source Code" = "https://github.com/mpi-astronomy/grismagic"


[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm>=8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/grismagic/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 130
exclude = [
    'docs',
    '.tox',
    '.eggs',
    'build',
    '*_version.py',
]

[tool.coverage.run]
omit = [
    "_version.py",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::asdf.exceptions.AsdfPackageVersionWarning",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64","linux-64"]

[tool.pixi.pypi-dependencies]
grismagic = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
roman = { features = ["roman"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.3,<3.15"
numpy = ">=2.4.3,<3"
scipy = ">=1.17.1,<2"
matplotlib = ">=3.10.8,<4"
pytest = ">=9.0.2,<10"
astropy = ">=7.2.0,<8"
asdf-astropy = ">=0.11.0,<0.12"
asdf = ">=5.2.0,<6"
